# inventory

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
inventory/: manage.py
inventory/core/utils/: collections.py  misc.py  settings.py
inventory/items/: models.py  tests.py  urls.py  views.py
inventory/items/migrations/: 0001_initial.py
inventory/project/: settings.py  urls.py
inventory/project/settings/: __init__.py  base.py  custom.py  docker.py  drf.py  envvars.py  jwt.py  logging.py  redis.py
inventory/user/: apps.py  tests.py  views.py
local/: settings.dev.py
project/: settings.py
